--- a/css/styles.css
+++ b/css/styles.css
@@ -879,3 +879,63 @@ margin: 0;
 .footer-icon{
     fill:var(--bgc-white);
 }
+
+.footer-form{
+    margin-left: 93px;
+}
+
+.footer-lable{
+
+}
+
+.footer-title{
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--bgc-white);
+  margin: 0; 
+  margin-bottom: 20px; 
+}
+
+.footer-input{
+  display: inline-block;
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  letter-spacing: 0.03em;
+  color: var(--link-color);
+
+  background-color: var(--bgc-footer);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.footer-button{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  padding: 10px 28px;
+  margin-left: 12px;
+  border: 0;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  letter-spacing: 0.06em;
+  color: var(--bgc-white);
+  background-color: var(--bgc-button);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.footer-svg{
+    margin-left: 10px;
+}
