--- a/css/styles.css
+++ b/css/styles.css
@@ -909,18 +909,22 @@ margin: 0;
   font-size: 16px;
   line-height: calc(20 / 16);
   letter-spacing: 0.03em;
+  
   color: var(--link-color);
-
   background-color: var(--bgc-footer);
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+
+  transition: drop-shadow 250ms var(--time-function);
 }
+
 
 .footer-button{
   display: inline-flex;
   justify-content: center;
   align-items: center;
+
   width: 200px;
   height: 50px;
   padding: 10px 28px;
@@ -930,10 +934,20 @@ margin: 0;
   font-size: 16px;
   line-height: calc(30 / 16);
   letter-spacing: 0.06em;
+
   color: var(--bgc-white);
   background-color: var(--bgc-button);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  cursor: pointer;
+
+  transition: box-shadow 250ms var(--time-function),
+  background-color 250ms var(--time-function);
+}
+
+.footer-button:hover,
+.footer-button:focus {
+    background-color: var(--bgc-button-hero);
 }
 
 .footer-svg{
