--- a/css/styles.css
+++ b/css/styles.css
@@ -304,21 +304,114 @@ body {
 .form{
     display: inline-flex;
     flex-direction: column;
+
 }
 
 .form-title{
-
+  font-style: normal;
+  font-weight: 700;
+  margin-top: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 12px;
+  font-size: 20px;
+  line-height: calc(23 / 20);
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-color)
 }
 
 .label{
+  display: block;
+  margin-left:40px;
+  margin-right: 40px;
+  
+  font-weight: 400;
+  font-size: 12px;
+  line-height:calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: var(--second-text-color)
 
+}
+
+.form-field{
+    position: relative;
 }
 
 .input{
-
+  /* position: relative;   */
+  padding: 11px 42px;
+  margin-bottom: 10px;
+  margin-top: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;  
+  width: 448px;
+  height: 40px;
+  cursor: pointer;
 }
 
-.form-button
+.svg{
+    position: absolute;
+    top: 50%;
+    left:10px;
+    transform: translateY(-50%);
+}
+
+.textarea{
+  width: 448px;
+  height: 120px;
+  margin-bottom: 20px;
+  margin-top: 4px;
+  padding: 12px 16px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height:calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.checkbox{
+  width: 400.62px;
+  height: 24px;
+  margin-bottom: 34px;
+  margin-left: 52px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color:var(--second-text-color);
+}
+
+.form-button{
+  width: 200px;
+  height: 50px;
+  margin-left: 164px;
+  margin-bottom: 40px;
+  padding: 10px 52px;
+  border: 0;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  color: var(--bgc-white);
+
+  background: var(--bgc-button);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+
+  transition: box-shadow 250ms var(--time-function),
+  background-color 250ms var(--time-function);
+}
+
+.form-button:hover,
+.form-button:focus {
+    background-color: var(--bgc-button-hero);
+}
 
 /* секція перваги*/
 
