--- a/css/styles.css
+++ b/css/styles.css
@@ -304,10 +304,6 @@ body {
 .form{
     display: inline-flex;
     flex-direction: column;
-    margin: 0;
-    border: 0;
-    padding: 0;
-
 }
 
 .form-title{
@@ -403,8 +399,7 @@ body {
 
 .checkbox-label{
   display: flex;
-  align-items: center
-  ;
+  align-items: center;
   width: 423px;
   height: 24px;
   margin-bottom: 30px;
@@ -434,7 +429,7 @@ body {
 
 .checkbox-icon{
     border: 2px solid var(--main-color);
-    border-radius: 4px;
+    border-radius: 2px;
     margin-right: 7px;
 }
 
